[package]
name = "raptor-cage"
version = "0.1.0"
edition = "2021"
license = "CIL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
rand = "0.8.5"
tempfile = "3.15.0"

[profile.release]
lto = true
strip = true
