[package]
name = "raptor-cage"
description = "Run games in a secure sandbox"
version = "1.0.4"
edition = "2024"
license = "CIL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
rand = "0.8.5"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["full"] }
zbus = { version = "5.10.0", default-features = false, features = ["tokio"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
